--- a/etc/buildrun_emqx_backend_mysql.conf
+++ b/etc/buildrun_emqx_backend_mysql.conf
@@ -15,4 +15,4 @@ backend.mysql.password = buildrun
 backend.mysql.database = mqtt
 
 ## MySQL Query Timeout
-mysql.query_timeout = 10s
+backend.mysql.query_timeout = 10s
